clusters/talos-ottawa/apps/media/app/sonarr-4k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-4k
spec:
  selector:
    app: sonarr-4k
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
