clusters/talos-ottawa/apps/media/app/sonarr-4k/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-4k
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "sonarr-4k"
    item.homer.rajsingh.info/subtitle: "TV Series Collection Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/sonarr.svg"
    item.homer.rajsingh.info/keywords: "tv, series, automation"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "sonarr-4k.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr-4k
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
